# EssayCoach

./: .ai-todo-complete  .env.example  .gitignore  .phase1-complete  .phase2-complete  ALL_WORK_COMPLETE.md  CLAUDE.md  Essay Agent.yml  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_STATUS.md  PHASE2_FINAL_STATUS.md  PHASE2_IMPLEMENTATION.md  PHASE3_FINAL_STATUS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REVIEW_AND_FIXES.md  SESSION_WORK_REPORT.md  TEST_PLAN.md  TODO.md  docker-compose.yml  flake.nix  mkdocs.yml  pyproject.toml  test_dns.py  verify_swagger.py
backend/: .pyrightignore 2  E2E_TEST_RESULTS 2.md  Procfile  README.md  RUN_TESTS.sh  TESTS_COMPLETION_SUMMARY.md  TEST_EXECUTION_REPORT.md  TEST_RESULTS_VALIDATION.md  conftest.py  custom_dns.py  dns_bypass_adapter.py  dns_bypass_socket.py  dns_resolver.py  inspect_rubric.py  manage.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  test_dify.py  test_e2e_rubric_import.py  test_e2e_simple.py  test_e2e_simple.py.bak  test_non_rubric.txt  verify_env.py  verify_tests.py
backend/agent/: readme.md
backend/ai_feedback/: README.md  TEST_COVERAGE.md  __init__.py  apps.py  client.py  conftest.py  dify_client.py  exceptions.py  interfaces.py  response_transformer.py  rubric_parser.py  schemas.py  serializers.py  tests.py  urls.py  views.py
backend/ai_feedback/tests/: test_dify_workflow.py  test_rubric_parser.py  test_workflow_integration.py
backend/analytics/: apps.py
backend/api_v1/: urls.py
backend/api_v1/ai_feedback/: README.md  apps.py  client.py  dify_client.py  schemas.py  serializers.py  urls.py  views.py
backend/api_v1/auth/: README.md  apps.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/api_v1/core/: admin.py  apps.py  rubric_manager.py  serializers.py  views.py
backend/api_v2/: MIGRATION_REPORT.md  TEST_REPORT.md  api.py
backend/api_v2/advanced/: schemas.py  views.py
backend/api_v2/ai_feedback/: schemas.py  views.py
backend/api_v2/analytics/: schemas.py  views.py
backend/api_v2/auth/: schemas.py  views.py
backend/api_v2/core/: schemas.py  views.py
backend/api_v2/help/: schemas.py  views.py
backend/api_v2/schemas/: base.py
backend/api_v2/social/: schemas.py  views.py
backend/api_v2/tests/: test_core_rbac_mutations.py  test_integration.py  test_jwt_auth_contract.py  test_ninja_api.py  test_performance.py  test_schemas.py  test_task_class_actions.py  test_task_class_crud.py  test_type_kernel.py
backend/api_v2/types/: __init__.py  common.py  enums.py  ids.py
backend/api_v2/users_admin/: schemas.py  views.py
backend/api_v2/utils/: auth.py  jwt_auth.py  permissions.py  types.py
backend/auth/: apps.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/core/: README.md  admin.py  models.py  rubric_manager.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_add_dashboard_indexes.py  0002_default_groups.py  0002_triggers.py  0003_default_groups.py  0003_remove_enrollment_enrollment_user_idx_and_more.py  0004_add_fk_to_m2m.py  0004_alter_submission_table_comment_and_more.py  0004_setup_permissions.py  0005_add_task_missing_fields.py  0005_setup_permissions.py  0006_class_enrollment_feedback_feedbackitem_markingrubric_and_more.py  0006_fix_task_model_duplicates.py  0006_widen_user_email_len.py  0007_class_enrollment_feedback_feedbackitem_markingrubric_and_more.py  0007_markingrubric_visibility_and_more.py  0008_alter_user_table_comment.py  0008_badge_user_preferences_userbadge_and_more.py  0009_alter_class_options_alter_enrollment_options_and_more.py  (+3 more)
backend/essay_coach/: __main__.py  middleware.py  settings.py  urls.py
backend/temp_resource/: readme.md
(+427 files in other folders)
